<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/teal"
    tools:context="com.nebososo.dolphindroid.ControllerActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.gesture.GestureOverlayView
            android:background="@drawable/button_style_corners"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/gesture_ir">
        </android.gesture.GestureOverlayView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="230dp">

                <Button
                    android:background="@drawable/button_style_corners"
                    android:textColor="@color/white"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_centerInParent="true"
                    android:id="@+id/bnt_home"/>

                <Button
                    android:background="@drawable/bnt_select"
                    android:textColor="@color/white"
                    android:layout_margin="5dp"
                    android:id="@+id/button_up"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:text="@string/up"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:layout_centerHorizontal="true"
                    android:layout_above="@id/bnt_home"/>

                <Button
                    android:background="@drawable/bnt_select"
                    android:textColor="@color/white"
                    android:layout_margin="5dp"
                    android:id="@+id/button_left"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:layout_toStartOf="@id/bnt_home"
                    android:layout_centerVertical="true"
                    android:textSize="50sp"
                    android:text="@string/left" />

                <Button
                    android:background="@drawable/bnt_select"
                    android:textColor="@color/white"
                    android:layout_margin="5dp"
                    android:id="@+id/button_right"
                    android:gravity="center"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/bnt_home"
                    android:textSize="50sp"
                    android:text="@string/right" />

                <Button
                    android:background="@drawable/bnt_select"
                    android:textColor="@color/white"
                    android:layout_margin="5dp"
                    android:id="@+id/button_down"
                    android:gravity="center"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_below="@id/bnt_home"
                    android:layout_centerHorizontal="true"
                    android:textSize="50sp"
                    android:text="@string/down" />

            </RelativeLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="fill_parent">

                <Button
                    android:id="@+id/button_a"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bnt_corners_select"
                    android:text="@string/a"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:layout_margin="5dp"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:background="@drawable/bnt_corners_select"
                    android:textColor="@color/white"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/b"
                    android:id="@+id/button_b"/>
            </LinearLayout>
        </LinearLayout>





        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ul"
                    android:visibility="gone"
                    android:id="@+id/button_ul"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ur"
                    android:id="@+id/button_ur"
                    android:visibility="gone"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/button_middle"
                    android:layout_weight="1"
                    android:visibility="invisible"/>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dl"
                    android:visibility="gone"
                    android:id="@+id/button_dl"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dr"
                    android:visibility="gone"
                    android:id="@+id/button_dr"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:background="@drawable/bnt_corners_select"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:id="@+id/button_minus"
                    android:layout_column="0"
                    android:layout_weight="1" />
                <Button
                    android:background="@drawable/bnt_corners_select"
                    android:textColor="@color/white"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textSize="20sp"
                    android:layout_centerInParent="true"
                    android:layout_column="1"
                    android:id="@+id/button_home"/>

                <Button
                    android:background="@drawable/bnt_corners_select"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus"
                    android:id="@+id/button_plus"
                    android:layout_column="2"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <Button
                    android:background="@drawable/bnt_corners_select"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:id="@+id/button_1"
                    android:layout_column="0"
                    android:layout_weight="1" />
                <Button
                    android:background="@drawable/bnt_corners_select"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    android:id="@+id/button_2"
                    android:layout_column="1"
                    android:layout_weight="1" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</RelativeLayout>
